--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Serviços</h2>
-                    <h3 class="section-subheading text-muted">Prateleira de serviços de Gerente de Sucesso:</h3>
+                    <h3 class="section-subheading text-muted">A tecnologia é cada dia mais fundamental e estratégica para os negócios, e contar com uma consultoria pode ser o caminho mais eficaz para alcançar os objetivos organizacionais.</h3>
                 </div>
             </div>
             <div class="row text-center">
@@ -110,16 +110,17 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Desenvolvemos o seu site de E-Commerce realizando toda a estrutura necessária para vendas.</p>
+                    <h4 class="service-heading">Projetos de TI</h4>
+                    <p class="text-muted">Com ampla experiência no mercado de TI e sólidos processos metodológicos, a Gerente de Sucesso oferece a seus clientes serviços de consultoria para obtenção das melhores soluções e para ajustar seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Desenvolvimento de Software</h4>
+                    <p class="text-muted">Com profundo conhecimento nas mais diversas plataformas e linguagens de programação, além de experiência de atuação em projetos globais em diferentes setores, a Gerente de Sucesso desenvolve projetos end-to-end, oferecendo sistemas específicos e soluções que atendam as estratégias de negócio do cliente.
+</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -236,8 +237,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Nosso Time</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
+					<!--                  
+				  <h3 class="section-subheading text-muted">O nosso time busca sempre nas parcerias o papel de grande aliada. Pensando nisso, atuamos consultivamente para que a tudo funcione à favor do negócio e da estratégia, apoiando a busca de resultados.</h3>
+					-->     
+	 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
@@ -290,7 +293,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">O nosso time busca sempre nas parcerias o papel de grande aliada. Pensando nisso, atuamos consultivamente para que a tudo funcione à favor do negócio e da estratégia, apoiando a busca de resultados.</p>
                 </div>
             </div>
         </div>
