--- a/index.html
+++ b/index.html
@@ -236,9 +236,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Nosso Time</h2>
+                    <h2 class="section-heading">Nossa Equipe</h2>
 					<!--                  
-				  <h3 class="section-subheading text-muted">O nosso time busca sempre nas parcerias o papel de grande aliada. Pensando nisso, atuamos consultivamente para que a tudo funcione à favor do negócio e da estratégia, apoiando a busca de resultados.</h3>
+				  <h3 class="section-subheading text-muted">Nossa equipe busca sempre nas parcerias o papel de grande aliada. Pensando nisso, atuamos consultivamente para que a tudo funcione à favor do negócio e da estratégia, apoiando a busca de resultados.</h3>
 					-->     
 	 </div>
             </div>
