--- a/index.html
+++ b/index.html
@@ -236,10 +236,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Nossa Equipe</h2>
-					<!--                  
-				  <h3 class="section-subheading text-muted">Nossa equipe busca sempre nas parcerias o papel de grande aliada. Pensando nisso, atuamos consultivamente para que a tudo funcione à favor do negócio e da estratégia, apoiando a busca de resultados.</h3>
-					-->     
+                    <h2 class="section-heading">Nosso Time</h2>               
+				  <h3 class="section-subheading text-muted">Profissionais capacitados para atender o seu negócio.</h3>
 	 </div>
             </div>
             <div class="row">
