--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Conteúdo</h2>
                     <h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você encontra todo o conteudo técnico e interativo também sobre o mundo de projetos.</h3></h3>
-					<a href="http://www.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
+					<a href="http://www.blog.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
                 </div>
             </div>
            
