--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
                         <a class="page-scroll" href="#about">Sobre</a>
 					</li>
 					-->
-                    <li>
-                        <a class="page-scroll" href="#team">Time</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#contact">Contato</a>
-                    </li>
-					 <li>
-                        <a class="page-scroll" href="#conteudo">Conteúdo</a>-->
+					<!--
+					<li>
+						<a class="page-scroll" href="#team">Time</a>
+					</li>
+					-->
+					<li>
+						<a class="page-scroll" href="#contact">Contato</a>
+					</li>
+					<li>
+						<a class="page-scroll" href="#conteudo">Conteúdo</a>
                     </li>
                 </ul>
             </div>
@@ -232,6 +234,7 @@
         </div>
     </section>
     <!-- Team Section -->
+	<!--
     <section id="team">
         <div class="container">
             <div class="row">
@@ -287,7 +290,6 @@
                         </ul>
                     </div>
                 </div>
-			  -->
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
@@ -296,7 +298,7 @@
             </div>
         </div>
     </section>
-
+ -->
     <!-- Clients Aside -->
     <!--<aside class="clients">
         <div class="container">
@@ -376,8 +378,8 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Conteúdo</h2>
-                    <h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você encontra todo o conteudo técnico e interativo também sobre o mundo de projetos.</h3></h3>
-					<a href="https://blog.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
+<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você encontra todo o conteudo técnico e interativo também sobre o mundo de projetos.</h3></h3>
+					<a href="http://www.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
                 </div>
             </div>
            
@@ -603,5 +605,4 @@
     <script src="js/agency.js"></script>
 
 </body>
-
 </html>
