--- a/index.html
+++ b/index.html
@@ -112,17 +112,16 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Projetos de TI</h4>
-                    <p class="text-muted">Com ampla experiência no mercado de TI e sólidos processos metodológicos, a Gerente de Sucesso oferece a seus clientes serviços de consultoria para obtenção das melhores soluções e para ajustar seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio. </p>
+                    <h4 class="service-heading">Sistemas sob medida</h4>
+                    <p class="text-muted">Desenvolvemos sistemas sob medida para sua Empresa. Nossa missão na GS Consultoria é proporcionar o desenvolvimento de software high-end e mais. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Desenvolvimento de Software</h4>
-                    <p class="text-muted">Com profundo conhecimento nas mais diversas plataformas e linguagens de programação, além de experiência de atuação em projetos globais em diferentes setores, a Gerente de Sucesso desenvolve projetos end-to-end, oferecendo sistemas específicos e soluções que atendam as estratégias de negócio do cliente.
-</p>
+                    <h4 class="service-heading">Consultoria em Projetos</h4>
+                    <p class="text-muted">Nossa missão na GS Consultoria é proporcionar a melhor consultoria de projetos e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
