--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Sistemas sob medida</h4>
-                    <p class="text-muted">Desenvolvemos sistemas sob medida para sua Empresa. Nossa missão na GS Consultoria é proporcionar o desenvolvimento de software high-end e mais. </p>
+                    <p class="text-muted">Desenvolvemos sistemas sob medida para sua Empresa. Na GS Consultoria o foco é total no desenvolvimento de software high-end sob medida, sem custos desnecessários. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -121,7 +121,7 @@
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Consultoria em Projetos</h4>
-                    <p class="text-muted">Nossa missão na GS Consultoria é proporcionar a melhor consultoria de projetos e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
+                    <p class="text-muted">Nossa missão é proporcionar a melhor consultoria de projetos de TI e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
