--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Sistemas sob medida</h4>
                     <p class="text-muted">Desenvolvemos sistemas sob medida para sua Empresa. Na GS Consultoria o foco é total no desenvolvimento de software high-end sob medida, sem custos desnecessários. </p>
@@ -118,7 +118,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Consultoria em Projetos</h4>
                     <p class="text-muted">Nossa missão é proporcionar a melhor consultoria de projetos de TI e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
