--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Consultoria em Projetos</h4>
-                    <p class="text-muted">Nossa missão é proporcionar a melhor consultoria de projetos de TI e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
+                    <p class="text-muted">Nossa missão é proporcionar a melhor consultoria de projetos e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
