--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Segurança da informação</h4>
+                    <p class="text-muted">Em um mundo cada vez mais conectado e com ameaças por todos os lados, a segurança da informação deixa de ser uma preocupação somente de grandes organizações e passa a ser assunto estratégico para todos.</p>
                 </div>
             </div>
         </div>
