--- a/index.html
+++ b/index.html
@@ -131,6 +131,14 @@
                     <h4 class="service-heading">Segurança da informação</h4>
                     <p class="text-muted">Em um mundo cada vez mais conectado e com ameaças por todos os lados, a segurança da informação deixa de ser uma preocupação somente de grandes organizações e passa a ser assunto estratégico para todos.</p>
                 </div>
+				 <div class="col-md-4">
+					<span class="fa-stack fa-4x">
+						<i class="fa fa-circle fa-stack-2x text-primary"></i>
+						<i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+					</span>
+					<h4 class="service-heading">TESTE</h4>
+					<p class="text-muted">Desenvolvemos sistemas sob medida para sua Empresa. Na GS Consultoria o foco é total no desenvolvimento de software high-end sob medida, sem custos desnecessários. </p>
+				</div>
             </div>
         </div>
     </section>
@@ -378,7 +386,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Conteúdo</h2>
 <h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você encontra todo o conteudo técnico e interativo também sobre o mundo de projetos.</h3></h3>
-					<a href="http://www.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
+					<a href="http://www.blog.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
                 </div>
             </div>
            
