--- a/index.html
+++ b/index.html
@@ -386,7 +386,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Conteúdo</h2>
 						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você encontra todo o conteudo técnico e interativo também sobre o mundo de projetos.</h3></h3>
-					<a href="https://blog.gerentedesucesso.com/" class="page-scroll btn btn-xl">Saiba mais</a>   
+					<a href="http://www.blog.gerentedesucesso.com" class="page-scroll btn btn-xl">Saiba mais</a>   
                 </div>
             </div>
            
@@ -403,11 +403,14 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <!--
+						<li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+						-->
+						<li><a href="https://www.facebook.com/gerentedesucesso2/"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        
+						<li><a href="https://br.linkedin.com/in/alexandremagno86"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
