--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
 						<li><a href="https://www.facebook.com/gerentedesucesso2/"><i class="fa fa-facebook"></i></a>
                         </li>
                         
-						<li><a href="https://br.linkedin.com/in/alexandremagno86"><i class="fa fa-linkedin"></i></a>
+						<li><a href="https://www.linkedin.com/company/gerente-de-sucesso/"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
                 </div>
