--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-line-chart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Consultoria em Projetos</h4>
+                    <h4 class="service-heading">Consultoria em projetos</h4>
                     <p class="text-muted">Nossa missão é proporcionar a melhor consultoria de projetos e serviços aos nossos clientes, ajustando seus investimentos em Tecnologia da Informação a seus requisitos e estratégias de negócio.</p>
                 </div>
                 <div class="col-md-4">
@@ -136,8 +136,8 @@
 						<i class="fa fa-circle fa-stack-2x text-primary"></i>
 						<i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
 					</span>
-					<h4 class="service-heading">TESTE</h4>
-					<p class="text-muted">Desenvolvemos sistemas sob medida para sua Empresa. Na GS Consultoria o foco é total no desenvolvimento de software high-end sob medida, sem custos desnecessários. </p>
+					<h4 class="service-heading">Estratégia em marketing digital</h4>
+					<p class="text-muted">Publicidade online é fundamental para que as empresas estejam preparadas para atuar na Internet e atrair mais clientes. A GS Consultoria acessora você nesse ambiente cada vez mais competitivo.</p>
 				</div>
             </div>
         </div>
