--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				 <div class="col-md-4">
 					<span class="fa-stack fa-4x">
 						<i class="fa fa-circle fa-stack-2x text-primary"></i>
-						<i class="fa fa-mobile fa-stack-1x fa-inverse"></i>
+						<i class="fa fa fa-thumbs-o-up fa-stack-1x fa-inverse"></i>
 					</span>
 					<h4 class="service-heading">Estratégia em marketing digital</h4>
 					<p class="text-muted">Publicidade online é fundamental para que as empresas estejam preparadas para atuar na Internet e atrair mais clientes. A GS Consultoria acessora você nesse ambiente cada vez mais competitivo.</p>
