--- a/index.html
+++ b/index.html
@@ -133,43 +133,11 @@
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
-            <div class="row">
+             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-                    <h3 class="section-subheading text-muted">Entre em contato conosco que em breve responderemos.</h3>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" class="form-control" placeholder="Seu Nome *" id="name" required data-validation-required-message="Por favor preencha seu Nome.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="email" class="form-control" placeholder="Seu Email *" id="email" required data-validation-required-message="Por favor preencha seu endereço de Email.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                                <div class="form-group">
-                                    <input type="tel" class="form-control" placeholder="Seu Telefone *" id="phone" required data-validation-required-message="Por favor preencha seu numero de Telefone.">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <textarea class="form-control" placeholder="Sua Mensagem *" id="message" required data-validation-required-message="Por favor preencha a Mensagem."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="clearfix"></div>
-                            <div class="col-lg-12 text-center">
-                                <div id="success"></div>
-                                <button type="submit" class="btn btn-xl">Enviar mensagem</button>
-                            </div>
-                        </div>
-                    </form>
+						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você será redirecionado para o formulário de contrato da GS Consultoria.</h3></h3>
+					<a href="https://blog.gerentedesucesso.com/contato/" class="page-scroll btn btn-xl">Saiba mais</a>   
                 </div>
             </div>
         </div>
