--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
              <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você será redirecionado para o formulário de contrato da GS Consultoria.</h3></h3>
+						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você será redirecionado para o formulário de contato da GS Consultoria.</h3></h3>
 					<a href="https://blog.gerentedesucesso.com/contato/" class="page-scroll btn btn-xl">Saiba mais</a>   
                 </div>
             </div>
