--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
              <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Aqui você será redirecionado para o formulário de contato da GS Consultoria.</h3></h3>
-					<a href="https://blog.gerentedesucesso.com/contato/" class="page-scroll btn btn-xl">Contato</a>   
+						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Entre em contato conosco que em breve responderemos.</h3></h3>
+					<a href="mailto:contato@gerentedesucesso.com.br" class="page-scroll btn btn-xl">Contato</a>   
                 </div>
             </div>
         </div>
