--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
              <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contato</h2>
-						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Para fazer um orçamento ou tirar suas dúvidas sobre os nossos serviços, entre em contato. Retornaremos no prazo de 24 horas.</h3></h3>
+						<h3 class="section-subheading text-muted"><h3 class="section-subheading text-muted">Para fazer um orçamento ou tirar suas dúvidas sobre os nossos serviços, entre em contato. Entraremos em contato em até 24 horas.</h3></h3>
 					<a href="mailto:contato@gerentedesucesso.com.br" class="page-scroll btn btn-xl">Contato</a>   
                 </div>
             </div>
